.metadata/.plugins/org.eclipse.cdt.ui/clase_1.build.log
20:33:21 **** Incremental Build of configuration Debug for project clase_1 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\clase_1.o" "..\\src\\clase_1.c" 
..\src\clase_1.c: In function 'main':
..\src\clase_1.c:15:2: error: unknown type name 'var'
  var edad;
  ^~~
..\src\clase_1.c:15:6: warning: unused variable 'edad' [-Wunused-variable]
  var edad;
      ^~~~

20:33:21 Build Failed. 1 errors, 1 warnings. (took 457ms)

